--- a/presentation/index.html
+++ b/presentation/index.html
@@ -44,7 +44,10 @@
         </div>
       </section>
       <section>
-        <a href="https://mdk-portfolio.herokuapp.com/">Ссылка на сайт</a>
+        <a href="https://mdk-portfolio.herokuapp.com/" target="_blank">Ссылка на сайт</a>
+      </section>
+      <section class="last-slide">
+        <h3>спасибо за внимание</h3>
       </section>
     </div>
   </div>
