--- a/presentation/index.html
+++ b/presentation/index.html
@@ -13,7 +13,7 @@
     <div class="slides">
       <section class="first-slide">
         <div class="atng-mention animated fadeinDown">
-          МИНИСТЕРСТВО ОБРАЗОВАНИЯ КРАСНОЯРСКОГО КРАЯ <br>КРАЕВОЕ ГОСУДАРСТВЕННОЕ АВТОНОМНОЕ ПРОФЕССИОНАЛЬНОЕ ОБРАЗОВАТЕЛЬНОЕ УЧРЕЖДЕНИЕ<br> «АЧИНСКИЙ ТЕХНИКУМ НЕФТИ И ГАЗА»
+          МИНИСТЕРСТВО ОБРАЗОВАНИЯ КРАСНОЯРСКОГО КРАЯ <br>КРАЕВОЕ ГОСУДАРСТВЕННОЕ АВТОНОМНОЕ ПРОФЕССИОНАЛЬНОЕ ОБРАЗОВАТЕЛЬНОЕ УЧРЕЖДЕНИЕ «АЧИНСКИЙ ТЕХНИКУМ НЕФТИ И ГАЗА»
         </div>
         <img class="avatar animated flipInX" src="https://s3-us-west-1.amazonaws.com/mdk-projects/profile.png" alt="">
         <h3 class="animated fadeinDown">Портфолио</h3>
